# ntriplereader

./: .gitignore  Makefile  class_diagram.plantuml  meson.build  ntriplereader.y  ntriplesbuilder.h  ntriplesbuildermock.c  ntriplesreader.l  ntriplesreader.y  test.sh
main/: Makefile  meson.build  ntriplebuilder.c  ntriplebuilder.h  ntriplereader.c  ntriplereader.h
test/: .gitignore  Makefile  meson.build  meson.build.py  ntriplebuildermock.c  ntriplebuilderspy.c  ntriplebuilderspy.h  run.sh  test.c
test/all/2statementsseparatedby2newlines/: stdin  stdout
test/all/2statementswithdatetime/: stdin  stdout
test/all/bufferoverflow2/: stdin
test/all/datetimestr/: stdin
test/all/emptybufferafterusage/: stdin  stdout
test/all/ignoreunicodechar/: stdout
test/all/simpledatatype/: starttoken  stdout
test/all/simpleliteralstring/: starttoken  stdout
test/all/simpleliteralstringanddatatype/: stdout
test/all/simpleobjectliteral/: starttoken  stdin  stdout
test/all/simpleobjecturi/: stdin
test/all/simplepredicate/: starttoken  stdout
test/all/simplestr/: stdin  stdout
test/all/simplesubject/: stdout
test/all/smoketest/: stderr
test/all/stringwithaccentedvowels/: starttoken
test/all/stringwithroundparens/: stdin  stdout
test/all/stringwithsingleequote/: stdout
test/all/stringwithspaces/: stdin
test/all/stringwithuppercasechars/: stdin  stdout
test/all/threesimplestatements/: stdin  stdout
test/all/twosimplestatements/: stdin
test/all/uriwithhashes/: stdin  stdout
test/all/uriwithunderscores/: stdin  stdout
tests/bufferoverflow2/: stdout  (+1 more)
(+35 files in other folders)
